# Lib_image_processing

./: .clang-format  CMakeLists.txt  CMakeLists.txt.in  README.md  any_command_add_j_automatic_parallel_jobs_count.sh  bootstrap.sh  cmake_project_bootstrap.sh  git_version.hpp.in  make_with_automatic_parallel_jobs_adjustment.sh  ninja_with_args.sh
CMake/: FindLibCmaes.cmake
data/: gmm_archive
doc/html/: _babbling_dataset_8cpp.html  _babbling_dataset_8cpp_source.html  _babbling_dataset_8h.html  _babbling_dataset_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _descriptor_extraction_8cpp.html  _descriptor_extraction_8cpp_source.html  _descriptor_extraction_8h.html  _descriptor_extraction_8h_source.html  _histogram_factory_8cpp.html  _histogram_factory_8cpp_source.html  _histogram_factory_8hpp.html  _histogram_factory_8hpp_source.html  _motion_detection_8cpp.html  _motion_detection_8cpp_source.html  _motion_detection_8h.html  _motion_detection_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _supervoxel_set_8cpp.html  _supervoxel_set_8cpp_source.html  _supervoxel_set_8h.html  _supervoxel_set_8h.js  _supervoxel_set_8h_source.html  _surface_of_interest_8cpp.html  _surface_of_interest_8cpp_source.html  _surface_of_interest_8h.html  _surface_of_interest_8h.js  _surface_of_interest_8h_source.html  _training_data_8hpp.html  _training_data_8hpp.js  _training_data_8hpp_source.html  annotated.html  annotated.js  class_motion_detection-members.html  class_motion_detection.html  class_motion_detection.js  (+106 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_9.js  files_a.js  functions_0.js  (+43 more)
include/image_processing/: BabblingDataset.h  DescriptorExtraction.h  HistogramFactory.hpp  MotionDetection.h  Object.h  Objects.h  SupervoxelSet.h  SurfaceOfInterest.h  default_parameters.hpp  features.hpp  pcl_serialization.h  pcl_types.h  tools.hpp
includes/: BabblingDataset.h  DescriptorExtraction.h  HistogramFactory.hpp  MotionDetection.h  SupervoxelSet.h  SurfaceOfInterest.h  TrainingData.hpp  pcl_types.h  tools.hpp
src/: BabblingDataset.cpp  DescriptorExtraction.cpp  HistogramFactory.cpp  MotionDetection.cpp  Object.cpp  Objects.cpp  SupervoxelSet.cpp  SurfaceOfInterest.cpp  tools.cpp
test/: camera_parameter.yml  color_hist_supervoxel.cpp  color_hist_test.cpp  convex_hull_test.cpp  fake_data.cpp  fsg_trace.hpp  hyperparameters.yml  load_dataset_test.cpp  number_type.hpp  test_object_hyp.cpp  test_rgb_reconstruct.cpp  test_rotation.cpp  test_rotation.hpp  wave_metadata.yml
